Fixed visualization with analyser. Fixed layout issues

--- a/assets/anim.css
+++ b/assets/anim.css
@@ -1,6 +1,23 @@
 body {
 	margin: 0;
-	overflow: hidden;
 	background: black;
 	color: #fff;
+}
+
+.full-body {
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+}
+
+.visualization-area {
+	height: 100%;
+	width: 100%;
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 47px;
+	border: none;
+	margin: 0;
+	overflow: hidden;
 }
